<resources>
    <string name="app_name">Ujian_Advance</string>
    <string name="title_upcoming">upcoming</string>
    <string name="title_finished">finished</string>
    <string name="title_favorite">favorite</string>
    <string name="title_setting">setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="judul">Judul</string>
    <string name="date">Date</string>
    <string name="summary">Summary</string>
    <string name="peserta">Peserta</string>
    <string name="kategori">kategori</string>
    <string name="city">Tempat</string>
    <string name="dark_mode">Dark mode</string>
    <string name="event">Cari event</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="register">Register</string>
</resources>