<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/judul"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="?attr/colorOnSurface"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/tv_judul"
            app:layout_constraintTop_toBottomOf="@+id/tv_judul" />

        <TextView
            android:id="@+id/tv_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/summary"
            android:textColor="?attr/colorOnSurface"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_category" />

        <TextView
            android:id="@+id/tv_pengunjung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/peserta"
            android:textSize="12sp"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintStart_toStartOf="@+id/tv_summary"
            app:layout_constraintTop_toBottomOf="@+id/tv_summary" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/kategori"
            android:padding="4dp"
            android:text="@string/kategori"
            android:textColor="?attr/colorOnSurface"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/tv_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_date" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:text="@string/city"
            android:textColor="?attr/colorOnSurface"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/tv_category"
            app:layout_constraintTop_toBottomOf="@+id/tv_date" />

        <ImageView
            android:id="@+id/tv_favorite"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/ic_love"
            app:layout_constraintBottom_toTopOf="@+id/tv_judul"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>