<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_finished"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/judul"
            android:textColor="?attr/colorOnSurface"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_finished"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@+id/tv_judul"
            app:layout_constraintTop_toBottomOf="@+id/tv_judul"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/kategori"
            android:padding="4dp"
            android:text="@string/kategori"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@+id/tv_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/city"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/tv_category"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/tv_pengunjung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peserta"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@+id/tv_category"
            app:layout_constraintTop_toBottomOf="@+id/tv_category"
            tools:ignore="SmallSp" />

        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_love"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>