<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailEventsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_detail"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_favorite"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="26dp"
                    android:src="@drawable/ic_love"
                    app:layout_constraintBottom_toTopOf="@+id/tv_judul"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_judul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/judul"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_detail" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_judul"
                    app:layout_constraintTop_toBottomOf="@+id/tv_judul" />

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/kategori"
                    android:padding="5dp"
                    android:text="@string/kategori"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_date"
                    app:layout_constraintTop_toBottomOf="@+id/tv_date" />

                <TextView
                    android:id="@+id/tv_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/city"
                    android:textSize="12sp"
                    android:textColor="?attr/colorOnSurface"
                    app:layout_constraintStart_toStartOf="@+id/tv_category"
                    app:layout_constraintTop_toBottomOf="@+id/tv_category" />

                <TextView
                    android:id="@+id/tv_deskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/deskripsi"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pengunjung" />

                <TextView
                    android:id="@+id/tv_pengunjung"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/peserta"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_city"
                    app:layout_constraintTop_toBottomOf="@+id/tv_city" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/register"
                    android:textSize="18sp"
                    android:backgroundTint="@android:color/holo_blue_bright"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_deskripsi" />

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>